--- a/index.html
+++ b/index.html
@@ -35,16 +35,36 @@
         </div>
 
         <nav class="desktop-nav">
-
+            <a href="#" class="nav-link" id="search-trigger">Buscar</a>
             <a href="about.html" class="nav-link">Nosotros</a>
             <a href="login.html" class="nav-link">Cuenta</a>
             <div class="cart-icon" id="cart-trigger">Carrito (0)</div>
         </nav>
-
         <div class="cart-icon mobile-only" id="cart-trigger-mobile">
             CARRITO (0)
         </div>
     </header>
+
+    <!-- SEARCH OVERLAY (Rhode Style) -->
+    <div class="search-overlay" id="search-overlay">
+        <div class="search-header-row">
+            <h2 class="search-title">search</h2>
+            <button class="close-search" id="close-search">&times;</button>
+        </div>
+
+        <div class="search-body">
+            <div class="search-input-wrapper">
+                <input type="text" id="overlay-search-input" placeholder="Search products..." autocomplete="off">
+            </div>
+
+            <p class="search-count" id="search-count-msg"></p>
+            <hr class="search-divider">
+
+            <div class="search-results-list" id="search-results-container">
+                <!-- Results injected here -->
+            </div>
+        </div>
+    </div>
 
     <!-- Mobile Menu Drawer -->
     <div class="mobile-menu-drawer" id="mobile-menu">
@@ -52,6 +72,8 @@
             <button class="close-menu" id="close-menu">&times;</button>
         </div>
         <nav class="mobile-nav">
+            <a href="#" class="mobile-nav-link"
+                onclick="document.getElementById('search-overlay').classList.add('active'); document.getElementById('close-menu').click()">Buscar</a>
             <a href="shop.html" class="mobile-nav-link">Ver Todo</a>
             <a href="shop.html?cat=skin" class="mobile-nav-link">Piel</a>
             <a href="shop.html?cat=lips" class="mobile-nav-link">Labios</a>
